# font-crusher

./: .gitmodules  CMakeLists.txt  CMakePresets.json  install_freetype2.sh
include/: crush.h
module/crush/: CMakeLists.txt
module/crush/include/: crush.h
module/crush/src/: context.c  crush_private.h  display.c  font.c  main.c  module.c  render.c
module/crush_render_backend/: CMakeLists.txt
module/crush_render_backend/include/: crush_render_backend.h
module/crush_render_backend/include/module/: mod_crush_render_backend.h
module/crush_render_backend/src/: backend.c  module.c
module/libcrush/: CMakeLists.txt
module/libcrush/include/: crush.h
module/libcrush/include/module/: mod_libcrush.h
module/libcrush/src/: module.c
module/libcrush_common/: CMakeLists.txt
module/libcrush_common/include/: crush_common.h  crush_queue.h
module/libcrush_common/include/module/: mod_crush_common.h
module/libcrush_common/src/: common.c  module.c  queue.c
module/libcrush_context/: CMakeLists.txt
module/libcrush_context/include/: crush_context.h
module/libcrush_context/include/module/: mod_crush_context.h
module/libcrush_context/src/: context.c  module.c
module/libcrush_display/: CMakeLists.txt
module/libcrush_display/include/: crush_display.h
module/libcrush_display/include/module/: mod_crush_display.h
module/libcrush_display/src/: display.c  module.c
module/libcrush_font/: CMakeLists.txt
module/libcrush_font/include/: crush_font.h
module/libcrush_font/include/module/: mod_crush_font.h
module/libcrush_font/src/: font.c  module.c
module/libcrush_module/: CMakeLists.txt
module/libcrush_module/include/: crush_module.h
module/libcrush_module/include/module/: mod_crush_module.h
module/libcrush_module/src/: crush_module.c  module.c
module/libcrush_render/: CMakeLists.txt
module/libcrush_render/include/: crush_context.h  crush_render.h
module/libcrush_render/include/module/: mod_crush_render.h
module/libcrush_render/src/: module.c  render.c  render_private.h
module/mod_freetype/: CMakeLists.txt
module/mod_freetype/include/module/: mod_freetype.h
module/mod_freetype/src/: module.c
module/mod_jansson/: CMakeLists.txt
module/mod_jansson/include/module/: mod_jansson.h
module/mod_jansson/src/: module.c
src/: context.c  crush_private.h  display.c  export.c  font.c  main.c  module.c  render.c
test_module/cmd_render_new/: CMakeLists.txt
test_resource/test_context_default/: context.json  display.json  font.json  module.json  render.json
